added fileExists endpoint and changed download req type
